s/rt_nurb_project_srf/nmg_nurb_project_srf/g
s/rt_nurb_region_from_srf/nmg_nurb_region_from_srf/g
s/rt_nurb_s_bound/nmg_nurb_s_bound/g
s/rt_nurb_s_check/nmg_nurb_s_check/g
s/rt_nurb_s_diff/nmg_nurb_s_diff/g
s/rt_nurb_s_flat/nmg_nurb_s_flat/g
s/rt_nurb_s_plot/nmg_nurb_s_plot/g
s/rt_nurb_s_split/nmg_nurb_s_split/g
s/rt_nurb_s_xsplit/nmg_nurb_s_xsplit/g
s/rt_nurb_scopy/nmg_nurb_scopy/g
s/rt_nurb_sinterp/nmg_nurb_sinterp/g
s/rt_nurb_solve/nmg_nurb_solve/g
s/rt_nurb_to_poly/nmg_nurb_to_poly/g
        rename old nurbs functions intertwined with nmg to use nmg prefix [7.27]
s/RTG.NMG_debug/nmg_debug/g
	make nmg debug flag top level, like libbu's [7.27]
s/BU_ASSERT(_[A-Z_]+)\(([^,]+|.*\(.*,.*\)),([^,]+|.*\(.*,.*\)),([^,]+|.*\(.*,.*\))\);/BU_ASSERT(\2\3\4);/g
	consolidated BU_ASSERT_PTR, BU_ASSERT_LONG, BU_ASSERT_SIZE_T, BU_ASSERT_SSIZE_T, BU_ASSERT_DOUBLE [7.27]
s/BU_FLSTR/CPP_FILELINE/g
        symbol now owned by common.h, not specific to libbu [7.27]
s/vert_root/bn_vert_tree/g
s/create_vert_tree[[:space:]]*\(/bn_vert_tree_create\(/g
s/create_vert_tree_w_norms[[:space:]]*\(/bn_vert_tree_create_w_norms\(/g
s/free_vert_tree[[:space:]]*\(/bn_vert_tree_destroy\(/g
s/Add_vert[[:space:]]*\(([^,]*,)([^,]*,)([^,]*,)([^,]*,)/bn_vert_tree_add\(\4\1\2\3/g
s/Add_vert_and_norm[[:space:]]*\(([^,]*,)([^,]*,)([^,]*,)([^,]*,)([^,]*,)([^,]*,)([^,]*,)/bn_vert_tree_add_w_norm\(\7\1\2\3\4\5\6/g
s/clean_vert_tree[[:space:]]*\(/bn_vert_tree_clean\(/g
        symbols renamed per convention with their library prefix [7.27]
s/BU_DEBUG_MEM_CHECK/0/g
s/DEBUG_MEM_FULL/0/g
        developer debugging symbols removed [7.27]
s/bu_dirname\(/bu_path_dirname\(/g
s/bu_basename\(/bu_path_basename\(/g
s/bu_normalize\(/bu_path_normalize\(/g
s/bu_argv_from_path\(/bu_path_to_argv\(/g
        renamed path functons with proper group label [7.27]
s/bu_fnmatch\(/bu_path_match\(/g
s/BU_FNMATCH_LEADING_DIR/0x0/g
s/BU_FNMATCH_/BU_PATH_MATCH/g
        renamed for consistency, simplified [7.27]